Added Plotting Lines on Chart

--- a/StockMarketAnalysis.csproj
+++ b/StockMarketAnalysis.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Plot.cs" />
+    <Compile Include="LinePlotter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
