--- a/StockMarketAnalysis.csproj
+++ b/StockMarketAnalysis.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GraphicsProcessor.cs" />
     <Compile Include="Plot.cs" />
     <Compile Include="LinePlotter.cs" />
     <Compile Include="Program.cs" />
