--- a/StockMarketAnalysis.csproj
+++ b/StockMarketAnalysis.csproj
@@ -59,6 +59,7 @@
     <Compile Include="LinePlotter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SideMenu.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
